# whisper-backend

./: .dockerignore  .gitignore  ADVANCED_FEATURES_GUIDE.md  DATABASE_SETUP.md  DEPLOYMENT_GUIDE.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  MANUAL_PUSH_INSTRUCTIONS.md  PROJECT_COMPLETE.md  QUICK_START.md  RAILWAY_DEPLOYMENT.md  RAILWAY_FRONTEND_SETUP.md  README.md  VIDEO_CALL_FEATURE.md  Whisper.bat  Whisper.vbs  advanced_features_api.py  cloud_api.py  dashboard.html  dashboard_face.html  desktop_app.py  google_tools.py  i18n.py  main.py  models.py  object_detection.py  pyproject.toml  railway.json  render.yaml  run_world_monitor.py  server.py  start.sh  test_imports.py  test_mcp.py  user_profile.json  video_call_api.py  whisper_agent.py  whisper_assistant.db  world-monitor.jsx
.github/workflows/: sync_to_hf.yml
Frontend interface Ai assistant/Ai UI interface/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
monitor-ui/: index.html  package-lock.json  package.json
monitor-ui/src/: App.jsx
scratch/: check_agent_events.py  check_agent_type.py  check_audio_chunk.py  check_audio_fields.py  check_input_opts.py  check_opts.py  check_pipeline.py  check_room_opts.py  check_transcription.py  check_voice_members.py  find_opts.py  inspect_agent.py  inspect_chat.py  inspect_llm.py  inspect_llm_stream.py  inspect_session.py  inspect_stream.py  inspect_stt.py  inspect_synthesize.py  inspect_tts.py  inspect_user_turn.py  test_agent_args.py  test_ai_speech.py  test_import.py
whisper/: __init__.py  config.py
whisper/prompts/: __init__.py
(+17 files in other folders)
